# car

./: .gitmodules  README.md
android-app/: .gitignore  Cargo.toml  settings.gradle
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/erik_tesar/car/remote/: BleService.java  BootReceiver.java  LogViewerActivity.java  MainActivity.java  RustService.java  SmsBroadcastReceiver.java
android-app/app/src/main/res/layout/: activity_main.xml
android-app/gradle/wrapper/: gradle-wrapper.properties
android-app/src/: ble.rs  lib.rs  schema.rs  sms.rs
door-controller/: .gitignore  Cargo.toml  diagram.json  partitions.csv  sdkconfig.defaults  wokwi.toml
door-controller/.cargo/: config.toml
door-controller/src/: ble.rs  controller.rs  main.rs  schema.rs  updater.rs
door-controller/src/updater/: index.html
pcbs/: .gitignore
pcbs/export/: starter-NPTH-drl.gbr  starter-NPTH.drl  starter-PTH-drl.gbr  starter-PTH.drl
pcbs/starter/: fp-info-cache  fp-lib-table  starter-B_Cu.gbr  starter-B_Mask.gbr  starter-B_Paste.gbr  starter-B_Silkscreen.gbr  starter-Edge_Cuts.gbr  starter-F_Cu.gbr  starter-F_Mask.gbr  starter-F_Paste.gbr  starter-F_Silkscreen.gbr  starter-job.gbrjob  starter.kicad_pcb  starter.kicad_prl  starter.kicad_pro  starter.kicad_sch  sym-lib-table
starter-firmware/: Cargo.toml
starter-firmware/.cargo/: config.toml
starter-firmware/.devcontainer/: devcontainer.json
starter-firmware/docs/: README.md
starter-firmware/scripts/: flash.sh
starter-firmware/src/: ble.rs  key.rs  main.rs  relay.rs  schema.rs
