[package]
name = "car-remote"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
android_logger = "0.15"
jni = "0.19"
log = "0.4.19"
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["macros", "rt"] }
jni-utils = { features = [
    "build-java-support",
], path = "/home/erik/Documents/jni-utils-rs" } #"git" = "https://github.com/deviceplug/jni-utils-rs.git" }
btleplug = { version = "0.11", features = ["serde"] }
color-eyre = "0.6.3"
uuid = { version = "1.16.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false }

[patch.crates-io]
btleplug = { path = "btleplug" }

[profile.dev]
debug = true
strip = false

[profile.release]
codegen-units = 1
lto = true
strip = false
