[package]
name = "door-controller"
version = "0.1.0"
authors = ["Erik Tesar <erik@erik-tesar.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.84"

[[bin]]
name = "door-controller"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = []

[dependencies]
log = "0.4"
futures-core = { version = "0.3.31", default-features = false }
esp-backtrace = { version = "0.15", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
    "esp32",
    "unstable",
    "log",
] }
esp-println = { version = "0.13", features = ["esp32", "log"] }
esp-alloc = { version = "0.7.0" }
esp-storage = { version = "0.5", features = [
    "esp32",
    "nor-flash",
    "storage",
] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.13", features = [
    "esp32",
    "ble",
] }
heapless = { version = "0.8.0", default-features = false }
bt-hci = { version = "0.3" }
esp-hal-embassy = { version = "0.7", features = ["esp32"] }
embassy-futures = "0.1.1"
embassy-time = { version = "0.4", features = [] }
static_cell = { version = "2", features = ["nightly"] }
embassy-sync = { version = "0.6", features = [] }
embassy-executor = { features = ["nightly"], version = "0.7" }
anyhow = { version = "1.0.98", default-features = false }

sequential-storage = { version = "4.0.1", features = ["alloc"] }
embassy-embedded-hal = "0.3.0"
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }

trouble-host = { default-features = false, features = [
    "log",
    "peripheral",
    "central",
    "gatt",
    "scan",
    "derive",
    "security",
    "default-packet-pool",
    "default-packet-pool-mtu-255",

], git = "https://github.com/embassy-rs/trouble.git", rev = "ec053f9dc294dd8d3c85e2a8fec82b6e359c68ff" }
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "eb6e22ab4dc355e1b81b4857515254d74432166a" }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ddbac7b12df85f6cccbc771d112d316ef3a6de26" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ddbac7b12df85f6cccbc771d112d316ef3a6de26" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ddbac7b12df85f6cccbc771d112d316ef3a6de26" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ddbac7b12df85f6cccbc771d112d316ef3a6de26" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ddbac7b12df85f6cccbc771d112d316ef3a6de26" }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ddbac7b12df85f6cccbc771d112d316ef3a6de26" }
esp-storage = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ddbac7b12df85f6cccbc771d112d316ef3a6de26" }



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 3
debug = true

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false
