[package]
name = "car-starter"
version = "0.1.0"
authors = ["Erik Tesar <erik@erik-tesar.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.0", features = ["esp32c3"] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.22" }
esp-alloc = { version = "0.5.0" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.10.1", features = [
    "esp32c3",
    #"phy-enable-usb",
    #"utils",
    "ble",
    "async",
] }
esp-storage = { version = "0.3", features = ["esp32c3"] }
heapless = { version = "0.8.0", default-features = false }
bt-hci = { version = "0.1.1" }
esp-hal-embassy = { version = "0.4", features = ["esp32c3"] }
embassy-futures = "0.1.1"
embassy-time = { version = "0.3", features = ["generic-queue-8"] }
static_cell = "2"
embassy-sync = { version = "0.6", features = [] }
embassy-executor = { features = ["task-arena-size-65536"], version = "0.6" }


# embassy-executor = { version = "0.6", features = [
#     "nightly",
# ] } #features = ["task-arena-size-65536"] }
#embassy-executor = { version = "0.6", features = ["nightly"] }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "3a9d3c13159cbd1b6df825b82e3f873deb03e140" }
ciborium = { version = "0.2.2", default-features = false }
serde = { version = "1", default-features = false, features = [
    "alloc",
    "derive",
] }
# [patch.crates-io]
# # FIXME: latest crates.io release does not compile but main branch does, see <https://github.com/embassy-rs/embassy/issues/3438>
# embassy-executor = { features = [
# ], git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "cd9e581c65be07a2006f4b9577460df509064bbe" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
debug = true

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
