[package]
name = "car-starter"
version = "0.1.0"
authors = ["Erik Tesar <erik@erik-tesar.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.15", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
    "esp32c3",
    "unstable",
    "log",
] }
esp-println = { version = "0.13", features = ["esp32c3", "log"] }
log = { version = "0.4" }
esp-alloc = { version = "0.7.0" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.13", features = [
    "esp32c3",
    #"phy-enable-usb",
    #"utils",
    "ble",
    #"async",
] }
esp-storage = { version = "0.5", features = [
    "esp32c3",
    "nor-flash",
    "storage",
] }
heapless = { version = "0.8.0", default-features = false }
bt-hci = { version = "0.3" }
esp-hal-embassy = { version = "0.7", features = ["esp32c3"] }
embassy-futures = "0.1.1"
embassy-time = { version = "0.4", features = ["generic-queue-8"] }
static_cell = "2"
embassy-sync = { version = "0.6", features = [] }
embassy-executor = { features = ["task-arena-size-65536"], version = "0.7" }


# embassy-executor = { version = "0.6", features = [
#     "nightly",
# ] } #features = ["task-arena-size-65536"] }
#embassy-executor = { version = "0.6", features = ["nightly"] }
trouble-host = { default-features = false, features = [
    "log",
    "peripheral",
    "central",
    "gatt",
    "scan",
    "derive",
    "security",
    "default-packet-pool",
    "default-packet-pool-mtu-255",

], git = "https://github.com/embassy-rs/trouble.git", rev = "644a418bed867d93e685442041ad6bc8b8f31681" }
serde = { version = "1", default-features = false, features = [

    "alloc",
    "derive",
] }
sequential-storage = { version = "4.0.1", features = ["alloc"] }
embassy-embedded-hal = "0.3.0"
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
# [patch.crates-io]
# # FIXME: latest crates.io release does not compile but main branch does, see <https://github.com/embassy-rs/embassy/issues/3438>
# embassy-executor = { features = [
# ], git = "https://github.com/embassy-rs/embassy.git", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "eb6e22ab4dc355e1b81b4857515254d74432166a" }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", rev = "8f0c5179d946d292652443a30e7172255886b99d" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "8f0c5179d946d292652443a30e7172255886b99d" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", rev = "8f0c5179d946d292652443a30e7172255886b99d" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "8f0c5179d946d292652443a30e7172255886b99d" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "8f0c5179d946d292652443a30e7172255886b99d" }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "8f0c5179d946d292652443a30e7172255886b99d" }
esp-storage = { git = "https://github.com/esp-rs/esp-hal.git", rev = "8f0c5179d946d292652443a30e7172255886b99d" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
debug = true

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
